Fix vertical alignment of date control month dropdown.

--- a/css/butterbean.css
+++ b/css/butterbean.css
@@ -230,6 +230,12 @@
 	height:  105px;
 }
 
+/* === Date Control === */
+
+.butterbean-control-date select {
+	vertical-align: top;
+}
+
 /* === Palette Control === */
 
 .butterbean-control-palette label {
